--- a/trunk/latexlab/eclipse/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/latexlab/eclipse/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,3 @@
 #Thu Feb 11 03:21:38 EST 2010
 eclipse.preferences.version=1
-entryPointModules=
-filesCopiedToWebInfLib=gwt-servlet.jar
+jarsExcludedFromWebInfLib=
