--- a/trunk/latexlab/eclipse/.settings/com.google.appengine.eclipse.core.prefs
+++ b/trunk/latexlab/eclipse/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,4 +1,4 @@
-#Sat Mar 20 15:04:21 EDT 2010
+#Mon Mar 29 00:52:40 EDT 2010
 eclipse.preferences.version=1
 filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.3.0.jar|appengine-api-labs-1.3.0.jar|datanucleus-appengine-1.0.4.1.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
-ormEnhancementInclusions=src/org/latexlab/docs/server/
+ormEnhancementInclusions=src/org/latexlab/docs/server/**|src/org/latexlab/docs/server/auth/AuthenticationToken.java|src/org/latexlab/docs/server/auth/Certificate.java
